refactor and solve most warnings